# ABQflow

./: .buildinfo  .buildinfo.bak  .gitignore  README.md  README.zh-CN.html  README.zh-CN.md  abaqus_batch_pack.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: README.zh-CN.doctree  abaqus_batch_pack.doctree  environment.pickle  index.doctree  modules.doctree
.doctrees/source/: ABQflow.core.doctree  ABQflow.doctree  ABQflow.helpers.doctree  abaqus_batch_pack.abaqus_automation.doctree  abaqus_batch_pack.doctree  abaqus_batch_pack.status.doctree  abaqus_batch_pack.strategies.doctree  abq-flow.doctree  abq_flow.doctree  architecture.doctree  getting_started.doctree  modules.doctree
.github/workflows/: deploy-docs.yaml
_modules/: index.html
_modules/abaqus_batch_pack/: abaqus_automation.html  context.html  registry.html  runner.html  spec.html  status.html  strategies.html
_modules/abq_flow/: abaqus_automation.html  runner.html
_sources/: README.zh-CN.md.txt
_sources/source/: ABQflow.helpers.rst.txt  abaqus_batch_pack.rst.txt  abq-flow.rst.txt  architecture.rst.txt  getting_started.rst.txt
docs/: conf.py  index.rst
docs/image/: architecture.drawio
source/: ABQflow.core.html  ABQflow.helpers.html  ABQflow.html  abaqus_batch_pack.abaqus_automation.html  abaqus_batch_pack.html  abaqus_batch_pack.status.html  abaqus_batch_pack.strategies.html  architecture.html  modules.html
test/: manualtest_read_from_inp.py  test_arrayinput.py  test_overwrite.py  test_strategies.py
(+105 files in other folders)
